# rosbag_image_crawler

./: .gitignore  README.md  package.xml  rosbag_to_imgset.py  setup.cfg  setup.py
launch/: image_crawler.launch.py  rosimgset.launch.py
rosbag_image_crawler/: get_label.py  get_label_csv.py  image_crawler.py
