<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rosbag_image_crawler</name>
    <version>0.1.1</version>
    <description>
        The image crawler that extracts and stores image topics every set period from rosbag file.
    </description>

    <maintainer email="dev_shin@cwsfa.co.kr">Shin</maintainer>
    <maintainer email="stu02@cwsfa.co.kr">leeeju</maintainer>
    <license>Apache 2.0</license>
    <url type="website">cwsfa.co.kr</url>
    <url type="repository">https://github.com/cwsfa/rosbag_image_crawler</url>
    <url type="bugtracker">https://github.com/cwsfa/rosbag_image_crawler/issues</url>

    <author email="dev_shin@cwsfa.co.kr">Shin</author>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>